namespaces/store/store.service.eu-west-1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: store-eu-west-1
  namespace: store
  annotations:
    configsync.gke.io/cluster-name-selector: luca-eu-west-1
spec:
  selector:
    app: store
  ports:
    - port: 8080
      targetPort: 8080
