namespaces/store/store.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: external-http
  namespace: store
  annotations:
    configsync.gke.io/cluster-name-selector: luca-eu-west-1
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: public-store-route
  namespace: store
  labels:
    gateway: external-http
spec:
  hostnames:
    - "test-store.forto.io"
  parentRefs:
    - name: external-http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /west-1
      backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: luca-eu-west-1
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /west-3
      backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: luca-eu-west-3
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /west-6
      backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: luca-eu-west-6
          port: 8080
    - backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: store
          port: 8080
